<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:your="http://schemas.android.com/tools">
    <group android:checkableBehavior="single">
        <!--<item
            android:id="@+id/menu_item_search"
            app:actionViewClass = "android.widget.SearchView"
            app:showAsAction = "always"
            android:title="@string/menu_item_search"/>
        <item
            android:id="@+id/menu_alterar"
            android:icon="@mipmap/ic_alterar_dados"
            android:title="@string/menu_item_dois" />-->

        <item
            android:id="@+id/menu_meus_dados"
            android:icon="@drawable/ic_account_box_black_24dp"
            android:title="@string/menu_md" />

        <item
            android:id="@+id/menu_prod_favoritos"
            android:icon="@drawable/ic_favorite_border_black_24dp"
            android:title="@string/menu_favoritos" />

        <item
            android:id="@+id/menu_historico_compras"
            android:icon="@drawable/ic_local_grocery_store_black_24dp"
            android:title="@string/menu_historico" />

    </group>

    <item android:title="@string/menu_outros">

        <menu>

            <item
                android:id="@+id/menu_sobre"
                android:icon="@drawable/ic_info_outline_black_24dp"
                android:title="@string/menu_item_sobre" />

            <item
                android:id="@+id/menu_notificacoes"
                android:icon="@drawable/ic_notifications_none_black_24dp"
                android:title="@string/menu_notificacoes" />

            <item
                android:id="@+id/menu_ajuda"
                android:icon="@drawable/ic_help_outline_black_24dp"
                android:title="@string/menu_Central" />

            <item
                android:id="@+id/menu_idiomas"
                android:icon="@drawable/ic_language_black_24dp"
                android:title="@string/menu_idiomas" />

            <item
                android:id="@+id/menu_sair"
                android:icon="@drawable/ic_exit_to_app_black_24dp"
                android:title="@string/menu_item_tres" />

        </menu>

    </item>

</menu>