<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- "Mark Favorite", should appear as action button if possible -->

    <item
        android:id="@+id/action_inicio"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/tab_inicio"
        app:showAsAction="ifRoom"
        tools:ignore="HardcodedText" />

    <item
        android:id="@+id/action_depart"
        android:icon="@drawable/ic_view_list_black_24dp"
        android:title="@string/tab_categorias_estabelcimento"
        app:showAsAction="ifRoom"
        tools:ignore="HardcodedText" />

    <item
        android:id="@+id/action_info"
        android:icon="@drawable/ic_info_outline_black_24dp"
        android:title="@string/tab_descricao_estabelcimento"
        app:showAsAction="ifRoom"
        tools:ignore="HardcodedText" />

    <item
        android:id="@+id/action_avaliações"
        android:icon="@drawable/ic_favorite_border_black_24dp"
        android:title= "@string/tab_avaliacao_estabelecimento"
        app:showAsAction="ifRoom"
        tools:ignore="HardcodedText" />


</menu>