<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <EditText
        android:id="@+id/ed_nova_senha"
        android:layout_width="250dp"
        android:layout_height="45dp"
        android:layout_marginTop="60dp"
        android:background="@drawable/borda_edittext"
        android:hint="@string/ed_nova_senha"
        android:inputType="textPassword"
        tools:ignore="HardcodedText,LabelFor,RtlHardcoded,TextFields"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:text="@string/txt_alterar_senha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        tools:textStyle="bold"
        android:id="@+id/txt_alterar_senha"
        android:layout_marginTop="11dp"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/bt_alterar_senha"
        android:layout_marginStart="11dp" />



    <EditText
           android:id="@+id/ed_confirm_senha"
           android:layout_width="250dp"
           android:layout_height="45dp"
           android:layout_marginTop="22dp"
           android:background="@drawable/borda_edittext"
           android:hint="@string/ed_confirm_senha"
           android:inputType="textPassword"
           tools:ignore="HardcodedText,LabelFor,RtlHardcoded"
           android:layout_below="@+id/ed_nova_senha"
           android:layout_alignStart="@+id/ed_nova_senha" />


        <Button
            android:id="@+id/bt_alterar_senha"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/bt_alterar_senha"
            android:background="@color/botoesPrimarios"
            android:textAllCaps="false"
            android:textColor="#fff"
            android:textSize="18sp"
            android:layout_marginLeft="22dp"
            android:layout_marginRight="22dp"
            tools:ignore="RtlHardcoded"
            android:layout_marginTop="14dp"
            android:layout_below="@+id/ed_confirm_senha"
            android:layout_centerHorizontal="true" />

        <TextView
            android:text=""
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/bt_alterar_senha"
            android:layout_centerHorizontal="true"
            android:id="@+id/textView5"
            tools:ignore="HardcodedText" />

</RelativeLayout>