<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/act_login_cliente"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="10dp"
    android:background="@drawable/mercado"
    tools:context="com.example.talit.projetotcc.activities.LoginPessoaJuridica">

    <LinearLayout
        android:id="@+id/ln_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/or"
        android:orientation="vertical"
        android:scrollbarAlwaysDrawVerticalTrack="true"
        tools:ignore="UselessParent">

        <ImageView
            android:id="@+id/imLogo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/logo_tipo"
            tools:ignore="ContentDescription" />

        <EditText
            android:id="@+id/ed_user_pj"
            android:layout_width="fill_parent"
            android:layout_height="60dp"
            android:layout_marginTop="50dp"
            android:background="@drawable/custom_editext_login"
            android:drawableLeft="@mipmap/ic_cliente_ussuario"
            android:drawableTint="@color/coresProvisoriastres"
            android:ems="2"
            android:hint="@string/ed_usuario_pj"
            android:inputType="text"
            android:maxLines="1"
            android:textColor="@color/coresProvisoriasdois"
            android:textColorHint="@color/coresProvisoriasdois"
            tools:ignore="RtlHardcoded,UnusedAttribute" />

        <EditText
            android:id="@+id/ed_senha_pj"
            android:layout_width="fill_parent"
            android:layout_height="60dp"
            android:background="@drawable/custom_edittext_senha"
            android:ems="2"
            android:drawableTint="@color/coresProvisoriastres"
            android:hint="@string/senha_cliente"
            android:inputType="textPassword"
            android:maxLines="1"
            android:password="true"
            android:textColor="@color/coresProvisoriasdois"
            android:textColorHint="@color/coresProvisoriasdois"
            android:drawableLeft="@mipmap/ic_visualizar"
            tools:ignore="Deprecated,HardcodedText,RtlHardcoded,UnusedAttribute" />

        <Button
            android:id="@+id/btn_esqueceu_senha"
            style="@android:style/Widget.Holo.Light.Button.Borderless.Small"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:text="@string/btn_esqueceu_senha"
            android:textColor="#cccccc"
            tools:ignore="RtlHardcoded" />

        <Button
            android:id="@+id/btn_entrar"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bordas_grid_buttons"
            android:text="@string/btn_entrar"
            android:textAllCaps="false"
            android:textColor="#fff"
            android:textSize="18sp" />
        <!--style="@android:style/Widget.Holo.Button.Small"-->

        <!--<Button
            android:id="@+id/btn_face"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="460dp"
            android:background="@drawable/bordas_grid_button_blue"
            android:text="@string/btn_face"
            android:textAllCaps="false"
            android:textColor="#fff"
            android:textSize="18sp" />-->

    </LinearLayout>

    <TextView
        android:id="@+id/or"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btn_cadastrar"
        android:gravity="center"
        android:padding="15dp"
        android:text=""
        android:textSize="20sp" />


    <ProgressBar
        android:id="@+id/ps_login"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp" />

    <Button
        android:id="@+id/btn_cadastrar"
        style="@android:style/Widget.Holo.Light.Button.Borderless.Small"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textColor="#fff"
        android:layout_alignParentBottom="true"
        android:text="@string/btn_cadastrar" />

</RelativeLayout>
